--- a/manifest.json
+++ b/manifest.json
@@ -1,26 +1,17 @@
 {
-	"browser_action": {
-     	  "default_icon": "icon128.png",
-     	  "default_title": "mTimer",
-     	  "default_popup": "popup.html"
-
-
-   },
-   "permissions": [
-    "tabs"
-  ],
-	"name": "mTimer",
-	"version": "3.2",
-	"manifest_version": 2,
-	"description": "Rubik's Cube Speed Timer",
-	
-	
-	"icons": {  
-		"16": "icon16.png",
-		"32": "icon32.png",
-		"128" : "icon128.png"
-	
-    }
-	
-
+  "browser_action": {
+    "default_icon": "icon128.png",
+    "default_title": "mTimer",
+    "default_popup": "popup.html"
+  },
+  "permissions": ["tabs"],
+  "name": "mTimer",
+  "version": "3.2.1",
+  "manifest_version": 2,
+  "description": "Rubik's Cube Speed Timer",
+  "icons": {
+    "16": "icon16.png",
+    "32": "icon32.png",
+    "128": "icon128.png"
+  }
 }
